// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display tooltip 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-6deth2-Slider e1eenexl0"
    style={Object {}}
  >
    <div
      className="rheostat rheostat-horizontal "
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="rheostat-background"
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={30000}
        className="rheostat-handle"
        data-handle-key={0}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "0%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      >
        <span
          className="slider-tooltip-visible"
        >
          30000
        </span>
      </button>
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={50000}
        className="rheostat-handle"
        data-handle-key={1}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "100%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      >
        <span
          className="slider-tooltip-visible"
        >
          50000
        </span>
      </button>
      <div
        className="rheostat-progress"
        style={
          Object {
            "left": "0%",
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="css-dqmsxc-rangeLabelsContainer"
    >
      <div
        className="css-1d4wqet-Label-left e1e72grt0"
      >
        30K
      </div>
      <div
        className="css-nxo6q1-Label-right e1e72grt0"
      >
        50K
      </div>
    </div>
  </div>
</div>
`;

exports[`should not render histogram when showHistogram is set to false 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-6deth2-Slider e1eenexl0"
    style={Object {}}
  >
    <div
      className="rheostat rheostat-horizontal "
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="rheostat-background"
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={30000}
        className="rheostat-handle"
        data-handle-key={0}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "0%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={50000}
        className="rheostat-handle"
        data-handle-key={1}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "100%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <div
        className="rheostat-progress"
        style={
          Object {
            "left": "0%",
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="css-dqmsxc-rangeLabelsContainer"
    >
      <div
        className="css-1d4wqet-Label-left e1e72grt0"
      >
        30K
      </div>
      <div
        className="css-nxo6q1-Label-right e1e72grt0"
      >
        50K
      </div>
    </div>
  </div>
</div>
`;

exports[`should render histogram when showHistogram is set to true 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-6deth2-Slider e1eenexl0"
    style={Object {}}
  >
    <div
      className="css-1wwr2lr-histogramContainer"
    >
      <div
        className="css-8ge3w0-Historam epihx070"
        height="0.8733624454148472%"
        title={2}
        width="2.35%"
      />
      <div
        className="css-954rq1-Historam epihx070"
        height="0.4366812227074236%"
        title={1}
        width="2.35%"
      />
      <div
        className="css-8ge3w0-Historam epihx070"
        height="0.8733624454148472%"
        title={2}
        width="2.35%"
      />
      <div
        className="css-1c2eanl-Historam epihx070"
        height="2.6200873362445414%"
        title={6}
        width="2.35%"
      />
      <div
        className="css-ysgauj-Historam epihx070"
        height="4.8034934497816595%"
        title={11}
        width="2.35%"
      />
      <div
        className="css-18s52cc-Historam epihx070"
        height="6.11353711790393%"
        title={14}
        width="2.35%"
      />
      <div
        className="css-1p04rvs-Historam epihx070"
        height="7.423580786026201%"
        title={17}
        width="2.35%"
      />
      <div
        className="css-xupe9k-Historam epihx070"
        height="3.493449781659389%"
        title={8}
        width="2.35%"
      />
      <div
        className="css-1luhgdf-Historam epihx070"
        height="10.91703056768559%"
        title={25}
        width="2.35%"
      />
      <div
        className="css-ia5oik-Historam epihx070"
        height="13.973799126637555%"
        title={32}
        width="2.35%"
      />
      <div
        className="css-1dfbgua-Historam epihx070"
        height="29.694323144104803%"
        title={68}
        width="2.35%"
      />
      <div
        className="css-1qw52zj-Historam epihx070"
        height="46.724890829694324%"
        title={107}
        width="2.35%"
      />
      <div
        className="css-344l6v-Historam epihx070"
        height="53.275109170305676%"
        title={122}
        width="2.35%"
      />
      <div
        className="css-1nds14h-Historam epihx070"
        height="66.37554585152839%"
        title={152}
        width="2.35%"
      />
      <div
        className="css-11rupnr-Historam epihx070"
        height="75.54585152838428%"
        title={173}
        width="2.35%"
      />
      <div
        className="css-8pgarh-Historam epihx070"
        height="83.4061135371179%"
        title={191}
        width="2.35%"
      />
      <div
        className="css-pky7ua-Historam epihx070"
        height="93.88646288209607%"
        title={215}
        width="2.35%"
      />
      <div
        className="css-850nxn-Historam epihx070"
        height="100%"
        title={229}
        width="2.35%"
      />
      <div
        className="css-sj8thg-Historam epihx070"
        height="93.44978165938865%"
        title={214}
        width="2.35%"
      />
      <div
        className="css-1rsgdge-Historam epihx070"
        height="78.16593886462883%"
        title={179}
        width="2.35%"
      />
      <div
        className="css-rtwreq-Historam epihx070"
        height="97.37991266375546%"
        title={223}
        width="2.35%"
      />
      <div
        className="css-1bluqjg-Historam epihx070"
        height="84.27947598253274%"
        title={193}
        width="2.35%"
      />
      <div
        className="css-vvvb3o-Historam epihx070"
        height="88.646288209607%"
        title={203}
        width="2.35%"
      />
      <div
        className="css-1k0visd-Historam epihx070"
        height="76.41921397379913%"
        title={175}
        width="2.35%"
      />
      <div
        className="css-16wmmpq-Historam epihx070"
        height="86.46288209606988%"
        title={198}
        width="2.35%"
      />
      <div
        className="css-wbi7u8-Historam epihx070"
        height="69.43231441048034%"
        title={159}
        width="2.35%"
      />
      <div
        className="css-1k0visd-Historam epihx070"
        height="76.41921397379913%"
        title={175}
        width="2.35%"
      />
      <div
        className="css-1vc7r3g-Historam epihx070"
        height="56.76855895196506%"
        title={130}
        width="2.35%"
      />
      <div
        className="css-16dndti-Historam epihx070"
        height="76.85589519650655%"
        title={176}
        width="2.35%"
      />
      <div
        className="css-xvovcn-Historam epihx070"
        height="63.31877729257642%"
        title={145}
        width="2.35%"
      />
      <div
        className="css-gswx0x-Historam epihx070"
        height="72.48908296943232%"
        title={166}
        width="2.35%"
      />
      <div
        className="css-1cx15h1-Historam epihx070"
        height="51.96506550218341%"
        title={119}
        width="2.35%"
      />
      <div
        className="css-gfj001-Historam epihx070"
        height="66.8122270742358%"
        title={153}
        width="2.35%"
      />
      <div
        className="css-1cx15h1-Historam epihx070"
        height="51.96506550218341%"
        title={119}
        width="2.35%"
      />
      <div
        className="css-upuiuw-Historam epihx070"
        height="58.07860262008734%"
        title={133}
        width="2.35%"
      />
      <div
        className="css-y7rip1-Historam epihx070"
        height="44.97816593886463%"
        title={103}
        width="2.35%"
      />
      <div
        className="css-12cje43-Historam epihx070"
        height="42.79475982532751%"
        title={98}
        width="2.35%"
      />
      <div
        className="css-4q9qfb-Historam epihx070"
        height="43.23144104803494%"
        title={99}
        width="2.35%"
      />
      <div
        className="css-12cje43-Historam epihx070"
        height="42.79475982532751%"
        title={98}
        width="2.35%"
      />
      <div
        className="css-1o2dfj8-Historam epihx070"
        height="45.414847161572055%"
        title={104}
        width="2.35%"
      />
      <div
        className="css-1o2dfj8-Historam epihx070"
        height="45.414847161572055%"
        title={104}
        width="2.35%"
      />
      <div
        className="css-lt4j4x-Historam epihx070"
        height="39.737991266375545%"
        title={91}
        width="2.35%"
      />
      <div
        className="css-9ui0oi-Historam epihx070"
        height="39.301310043668124%"
        title={90}
        width="2.35%"
      />
      <div
        className="css-115avy8-Historam epihx070"
        height="31.004366812227076%"
        title={71}
        width="2.35%"
      />
      <div
        className="css-1gizm5m-Historam epihx070"
        height="42.35807860262009%"
        title={97}
        width="2.35%"
      />
      <div
        className="css-d81rpu-Historam epihx070"
        height="38.427947598253276%"
        title={88}
        width="2.35%"
      />
      <div
        className="css-1wupcbc-Historam epihx070"
        height="37.99126637554585%"
        title={87}
        width="2.35%"
      />
      <div
        className="css-11efrgy-Historam epihx070"
        height="33.18777292576419%"
        title={76}
        width="2.35%"
      />
      <div
        className="css-3l0363-Historam epihx070"
        height="27.94759825327511%"
        title={64}
        width="2.35%"
      />
      <div
        className="css-lp0wd1-Historam epihx070"
        height="33.624454148471614%"
        title={77}
        width="2.35%"
      />
      <div
        className="css-1t45cpo-Historam epihx070"
        height="28.38427947598253%"
        title={65}
        width="2.35%"
      />
      <div
        className="css-115avy8-Historam epihx070"
        height="31.004366812227076%"
        title={71}
        width="2.35%"
      />
      <div
        className="css-3l0363-Historam epihx070"
        height="27.94759825327511%"
        title={64}
        width="2.35%"
      />
      <div
        className="css-1uge6kb-Historam epihx070"
        height="23.580786026200872%"
        title={54}
        width="2.35%"
      />
      <div
        className="css-1ybev8e-Historam epihx070"
        height="23.14410480349345%"
        title={53}
        width="2.35%"
      />
      <div
        className="css-huojq6-Historam epihx070"
        height="27.510917030567686%"
        title={63}
        width="2.35%"
      />
      <div
        className="css-1m175y0-Historam epihx070"
        height="26.200873362445414%"
        title={60}
        width="2.35%"
      />
      <div
        className="css-1ybev8e-Historam epihx070"
        height="23.14410480349345%"
        title={53}
        width="2.35%"
      />
      <div
        className="css-1livbaq-Historam epihx070"
        height="24.45414847161572%"
        title={56}
        width="2.35%"
      />
      <div
        className="css-zbmok2-Historam epihx070"
        height="17.03056768558952%"
        title={39}
        width="2.35%"
      />
      <div
        className="css-1dy1wm7-Historam epihx070"
        height="18.777292576419214%"
        title={43}
        width="2.35%"
      />
      <div
        className="css-1cd96pj-Historam epihx070"
        height="22.270742358078603%"
        title={51}
        width="2.35%"
      />
      <div
        className="css-1cd96pj-Historam epihx070"
        height="22.270742358078603%"
        title={51}
        width="2.35%"
      />
      <div
        className="css-1ybev8e-Historam epihx070"
        height="23.14410480349345%"
        title={53}
        width="2.35%"
      />
      <div
        className="css-1udz97v-Historam epihx070"
        height="20.087336244541486%"
        title={46}
        width="2.35%"
      />
      <div
        className="css-x0ybcu-Historam epihx070"
        height="18.34061135371179%"
        title={42}
        width="2.35%"
      />
      <div
        className="css-86f9gx-Historam epihx070"
        height="16.157205240174672%"
        title={37}
        width="2.35%"
      />
      <div
        className="css-86f9gx-Historam epihx070"
        height="16.157205240174672%"
        title={37}
        width="2.35%"
      />
      <div
        className="css-86f9gx-Historam epihx070"
        height="16.157205240174672%"
        title={37}
        width="2.35%"
      />
      <div
        className="css-1u1f7g7-Historam epihx070"
        height="14.847161572052402%"
        title={34}
        width="2.35%"
      />
      <div
        className="css-2nm16p-Historam epihx070"
        height="14.410480349344978%"
        title={33}
        width="2.35%"
      />
      <div
        className="css-1jckw3i-Historam epihx070"
        height="15.720524017467248%"
        title={36}
        width="2.35%"
      />
      <div
        className="css-x0ybcu-Historam epihx070"
        height="18.34061135371179%"
        title={42}
        width="2.35%"
      />
      <div
        className="css-1dy1wm7-Historam epihx070"
        height="18.777292576419214%"
        title={43}
        width="2.35%"
      />
      <div
        className="css-zbmok2-Historam epihx070"
        height="17.03056768558952%"
        title={39}
        width="2.35%"
      />
      <div
        className="css-1aod7kh-Historam epihx070"
        height="12.663755458515285%"
        title={29}
        width="2.35%"
      />
      <div
        className="css-1u1f7g7-Historam epihx070"
        height="14.847161572052402%"
        title={34}
        width="2.35%"
      />
      <div
        className="css-ox5ydp-Historam epihx070"
        height="13.100436681222707%"
        title={30}
        width="2.35%"
      />
      <div
        className="css-1u1f7g7-Historam epihx070"
        height="14.847161572052402%"
        title={34}
        width="2.35%"
      />
      <div
        className="css-1aod7kh-Historam epihx070"
        height="12.663755458515285%"
        title={29}
        width="2.35%"
      />
      <div
        className="css-57f7b8-Historam epihx070"
        height="12.22707423580786%"
        title={28}
        width="2.35%"
      />
      <div
        className="css-ia5oik-Historam epihx070"
        height="13.973799126637555%"
        title={32}
        width="2.35%"
      />
      <div
        className="css-ymjzf-Historam epihx070"
        height="10.480349344978166%"
        title={24}
        width="2.35%"
      />
      <div
        className="css-2nm16p-Historam epihx070"
        height="14.410480349344978%"
        title={33}
        width="2.35%"
      />
      <div
        className="css-57f7b8-Historam epihx070"
        height="12.22707423580786%"
        title={28}
        width="2.35%"
      />
      <div
        className="css-1yqzybn-Historam epihx070"
        height="9.170305676855895%"
        title={21}
        width="2.35%"
      />
      <div
        className="css-ox5ydp-Historam epihx070"
        height="13.100436681222707%"
        title={30}
        width="2.35%"
      />
      <div
        className="css-2nm16p-Historam epihx070"
        height="14.410480349344978%"
        title={33}
        width="2.35%"
      />
      <div
        className="css-knj2wx-Historam epihx070"
        height="13.537117903930131%"
        title={31}
        width="2.35%"
      />
      <div
        className="css-1yqzybn-Historam epihx070"
        height="9.170305676855895%"
        title={21}
        width="2.35%"
      />
      <div
        className="css-4q9gjy-Historam epihx070"
        height="10.043668122270743%"
        title={23}
        width="2.35%"
      />
      <div
        className="css-ymjzf-Historam epihx070"
        height="10.480349344978166%"
        title={24}
        width="2.35%"
      />
      <div
        className="css-7e9ddl-Historam epihx070"
        height="11.353711790393014%"
        title={26}
        width="2.35%"
      />
      <div
        className="css-1a6nkbn-Historam epihx070"
        height="8.733624454148472%"
        title={20}
        width="2.35%"
      />
      <div
        className="css-p38tx8-Historam epihx070"
        height="6.986899563318778%"
        title={16}
        width="2.35%"
      />
      <div
        className="css-12voett-Historam epihx070"
        height="11.790393013100436%"
        title={27}
        width="2.35%"
      />
      <div
        className="css-1luhgdf-Historam epihx070"
        height="10.91703056768559%"
        title={25}
        width="2.35%"
      />
      <div
        className="css-7e9ddl-Historam epihx070"
        height="11.353711790393014%"
        title={26}
        width="2.35%"
      />
      <div
        className="css-1g8vboa-Historam epihx070"
        height="8.296943231441048%"
        title={19}
        width="2.35%"
      />
      <div
        className="css-1k5odah-Historam epihx070"
        height="7.423580786026201%"
        title={17}
        width="1%"
      />
      <div
        className="css-187yhfs-Historam epihx070"
        height="0%"
        title={0}
        width="1.35%"
      />
    </div>
    <div
      className="rheostat rheostat-horizontal "
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="rheostat-background"
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={30000}
        className="rheostat-handle"
        data-handle-key={0}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "0%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={50000}
        className="rheostat-handle"
        data-handle-key={1}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "100%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <div
        className="rheostat-progress"
        style={
          Object {
            "left": "0%",
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="css-dqmsxc-rangeLabelsContainer"
    >
      <div
        className="css-1d4wqet-Label-left e1e72grt0"
      >
        30K
      </div>
      <div
        className="css-nxo6q1-Label-right e1e72grt0"
      >
        50K
      </div>
    </div>
  </div>
</div>
`;

exports[`should render range labels 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-6deth2-Slider e1eenexl0"
    style={Object {}}
  >
    <div
      className="rheostat rheostat-horizontal "
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="rheostat-background"
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={30000}
        className="rheostat-handle"
        data-handle-key={0}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "0%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={50000}
        className="rheostat-handle"
        data-handle-key={1}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "100%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <div
        className="rheostat-progress"
        style={
          Object {
            "left": "0%",
            "width": "100%",
          }
        }
      />
    </div>
    <div
      className="css-dqmsxc-rangeLabelsContainer"
    >
      <div
        className="css-1d4wqet-Label-left e1e72grt0"
      >
        30K
      </div>
      <div
        className="css-nxo6q1-Label-right e1e72grt0"
      >
        50K
      </div>
    </div>
  </div>
</div>
`;

exports[`should render slider 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-6deth2-Slider e1eenexl0"
    style={Object {}}
  >
    <div
      className="rheostat rheostat-horizontal "
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="rheostat-background"
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={30000}
        className="rheostat-handle"
        data-handle-key={0}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "0%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={50000}
        className="rheostat-handle"
        data-handle-key={1}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "100%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <div
        className="rheostat-progress"
        style={
          Object {
            "left": "0%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render title 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-6deth2-Slider e1eenexl0"
    style={Object {}}
  >
    <h2
      className="css-1dd55xt-Title e1u1u4gy0"
    >
      Mock RangeSlider
    </h2>
    <div
      className="rheostat rheostat-horizontal "
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="rheostat-background"
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={30000}
        className="rheostat-handle"
        data-handle-key={0}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "0%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={30000}
        aria-valuenow={50000}
        className="rheostat-handle"
        data-handle-key={1}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "100%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <div
        className="rheostat-progress"
        style={
          Object {
            "left": "0%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should select default value 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-6deth2-Slider e1eenexl0"
    style={Object {}}
  >
    <div
      className="rheostat rheostat-horizontal "
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="rheostat-background"
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={48000}
        aria-valuemin={30000}
        aria-valuenow={32000}
        className="rheostat-handle"
        data-handle-key={0}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "10%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <button
        aria-disabled={false}
        aria-label="slider-button"
        aria-valuemax={50000}
        aria-valuemin={32000}
        aria-valuenow={48000}
        className="rheostat-handle"
        data-handle-key={1}
        onClick={undefined}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "90%",
            "position": "absolute",
          }
        }
        tabIndex={0}
      />
      <div
        className="rheostat-progress"
        style={
          Object {
            "left": "10%",
            "width": "80%",
          }
        }
      />
    </div>
    <div
      className="css-dqmsxc-rangeLabelsContainer"
    >
      <div
        className="css-1d4wqet-Label-left e1e72grt0"
      >
        30K
      </div>
      <div
        className="css-nxo6q1-Label-right e1e72grt0"
      >
        50K
      </div>
    </div>
  </div>
</div>
`;
